tweaks to visuals – fix card spacing – add tweaks for outreachc – unify link colors

--- a/src/scss/framework/_custom_variables.scss
+++ b/src/scss/framework/_custom_variables.scss
@@ -141,10 +141,6 @@ $theme-colors: map-merge(
 color:$utsmokey;
 }
 
-.has-white-background-color {
-  background-color: $white !important;
-}
-
 // Customize the light and dark text colors for use in our color contrast function.
 $color-contrast-dark: $utsmokeytext;
 $color-contrast-light: $white !default;
