--- a/src/scss/framework/styles/_background.scss
+++ b/src/scss/framework/styles/_background.scss
@@ -19,6 +19,11 @@
 .has-light-background-color {
   @extend .bg-light;
 }
+
+.has-white-background-color {
+  @extend .bg-white;
+}
+
 .has-background {
-  padding: $spacer * 2;
+  // padding: $spacer * 2;
 }
